--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mathieustan/vue-datepicker": "^0.2.11",
     "axios": "^0.21.1",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
@@ -16,6 +17,7 @@
     "vue": "^2.6.11",
     "vue-axios": "^3.2.4",
     "vue-router": "^3.2.0",
+    "vue2-datepicker": "^3.9.1",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
